fix and extend quickstart, faster customParameter validation and handle  MISSING_PERMISSIONS 50013 error better